--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2003 Chevrolet Suburban 1500"
+            android:fontFamily="sans-serif-condensed"
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:fontFamily="sans-serif-condensed"
             android:text="5.000.000 VND"/>
 
     </LinearLayout>
