--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -19,6 +19,7 @@
         android:lines="1"
         android:padding="8dp"
         android:text="2003 Chevrolet Suburban 1500"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
@@ -45,6 +46,7 @@
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:text="1 of 3"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white" />
 
 </RelativeLayout>
