--- a/app/src/main/res/layout/custom_order_dialog.xml
+++ b/app/src/main/res/layout/custom_order_dialog.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product name"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="2003 Chevrolet Suburban 1500"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp" />
 
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:text="Price per day"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -34,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="1.000.000 VND"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp" />
 
@@ -42,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:text="Number of days"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -57,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="4"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp"
         android:layout_gravity="center_horizontal"/>
@@ -66,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:text="Total cost"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -75,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="1.000.000 VND"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp" />
 
