--- a/app/src/main/res/layout/dialog_user_info.xml
+++ b/app/src/main/res/layout/dialog_user_info.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="2003 Chevrolet Suburban 1500"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp" />
 
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:text="Email"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -34,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="1.000.000 VND"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp" />
 
@@ -42,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:text="Address"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -51,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="1.000.000 VND"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp" />
 
@@ -59,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:text="Phone number"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#80000000"
         android:textSize="14sp" />
 
@@ -68,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="1.000.000 VND"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="#000000"
         android:textSize="18sp" />
 
@@ -83,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Type"
+                android:fontFamily="sans-serif-condensed"
                 android:textColor="#80000000"
                 android:textSize="14sp" />
 
@@ -90,6 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Status"
+                android:fontFamily="sans-serif-condensed"
                 android:textColor="#80000000"
                 android:textSize="14sp" />
         </TableRow>
@@ -103,6 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="D1"
+                android:fontFamily="sans-serif-condensed"
                 android:textColor="#000000"
                 android:textSize="18sp" />
 
@@ -111,6 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="26"
+                android:fontFamily="sans-serif-condensed"
                 android:textColor="@color/colorAccent"
                 android:textSize="18sp" />
         </TableRow>
