--- a/app/src/main/res/layout/item_manage_order.xml
+++ b/app/src/main/res/layout/item_manage_order.xml
@@ -103,7 +103,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_account_black_24dp" />
+                        android:src="@drawable/ic_account_outline_black_24dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -156,6 +156,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="By "
+                            android:fontFamily="sans-serif-condensed"
                             android:textSize="12sp"/>
 
                         <TextView
@@ -163,6 +164,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Hai Nguyen"
+                            android:fontFamily="sans-serif-condensed"
                             android:textColor="#000000"
                             android:textSize="12sp"
                             android:textStyle="bold"/>
@@ -171,6 +173,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=" at "
+                            android:fontFamily="sans-serif-condensed"
                             android:textSize="12sp"/>
 
                         <TextView
@@ -178,6 +181,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="12:44 Wednesday"
+                            android:fontFamily="sans-serif-condensed"
                             android:lines="1"
                             android:textColor="#000000"
                             android:textSize="12sp"
@@ -191,6 +195,7 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:text="2003 Chevrolet Suburban 1500"
+                        android:fontFamily="sans-serif-condensed"
                         android:textColor="#000000"
                         android:textSize="14sp"
                         android:textStyle="bold" />
@@ -206,6 +211,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Status"
+                                android:fontFamily="sans-serif-condensed"
                                 android:textColor="#80000000"
                                 android:textSize="12sp" />
 
@@ -213,6 +219,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Days"
+                                android:fontFamily="sans-serif-condensed"
                                 android:textColor="#80000000"
                                 android:textSize="12sp" />
 
@@ -220,6 +227,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Total price"
+                                android:fontFamily="sans-serif-condensed"
                                 android:textColor="#80000000"
                                 android:textSize="12sp" />
                         </TableRow>
@@ -231,6 +239,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="DONE"
+                                android:fontFamily="sans-serif-condensed"
                                 android:textColor="#000000"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
@@ -240,6 +249,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="3"
+                                android:fontFamily="sans-serif-condensed"
                                 android:textColor="#000000"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
@@ -249,6 +259,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="10.000.000"
+                                android:fontFamily="sans-serif-condensed"
                                 android:textColor="@color/colorAccent"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
